<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actividad2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_titulo_nombre_activity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_nombres" />

        <TextView
            android:id="@+id/editText_nombre_activity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:editable="false"/>
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25px">

        <TextView
            android:id="@+id/textView_titulo_base_activity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_base" />

        <TextView
            android:id="@+id/editText_base_Activity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:editable="false"/>/>
    </LinearLayout>

    <Button
        android:id="@+id/button_siguiente_activity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_siguiente"
        android:layout_margin="45px"
        android:onClick="AbrirActivity3"
        />
    <Button
        android:id="@+id/button_cerrar_Activity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cerrar"
        android:layout_margin="45px"
        android:onClick="CerrarActivity2"/>

</LinearLayout>