<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25px">

        <TextView
            android:id="@+id/textView_titulo_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_nombres" />

        <TextView
            android:id="@+id/editText_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25px">

        <TextView
            android:id="@+id/textView_titulo_apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_apellidos" />

        <TextView
            android:id="@+id/editText_apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:editable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25px">

        <TextView
            android:id="@+id/textView_titulo_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_base" />

        <TextView
            android:id="@+id/editText_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:editable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25px">

        <TextView
            android:id="@+id/textView_titulo_exponente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_exponente" />

        <TextView
            android:id="@+id/editText_exponente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:editable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25px">

        <TextView
            android:id="@+id/textView_titulo_factorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_factorial" />

        <TextView
            android:id="@+id/editText_factorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:editable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25px">

        <TextView
            android:id="@+id/textView_titulo_potencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_potencia" />

        <TextView
            android:id="@+id/editText_potencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:editable="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_siguiente"
        android:layout_margin="45px"
        android:onClick="AbrirSegundaActivity"/>

    <Button
        android:id="@+id/button_mostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_resultados"
        android:layout_margin="45px"/>
</LinearLayout>